Update as of 8:32pm

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <body>
     <header><div class="container">
       <div class="row">
-        <div clas="col-xs-12">
-          <img src="https://static.thumbtackstatic.com/pictures/6606/6udaemqu60902lak2jj50rl675.jpg">
+        <div clas="col-xs-12 col-centered">
+          <h1>Chef C's Kitchen</h1>
+<!--Image width???<img src="https://static.thumbtackstatic.com/pictures/6606/6udaemqu60902lak2jj50rl675.jpg">-->
         </div>
       </div>
     </div></header>
@@ -23,13 +24,13 @@
           <!--add to cart button-->
         </div>
         <div class="col-md-2">
-          <img src="">
+          <img src="./img/chicken_salad_sand.jpg">
           <h2>Smoked Chicken Salad Sandwich</h2>
           <!--dropdown-->
           <!--add to cart button-->
         </div>
         <div class="col-md-2">
-          <img src="">
+          <img src="./img/black_forest_ham.jpg">
           <h2>Black Forest Ham and Cheese</h2>
           <!--dropdown-->
           <!--add to cart button-->
