Update as of 8:36pm

--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
     <div class="container">
       <div class="row">
         <div class="col-md-2">
-          <img src="">
+          <img src="./img/roast_beef.png">
           <h2>Smoked Roast Beef and Cheese</h2>
           <!--dropdown-->
           <!--add to cart button-->
         </div>
         <div class="col-md-2">
-          <img src="./img/chicken_salad_sand.jpg">
+          <img src="./img/chicken_salad_sand.png">
           <h2>Smoked Chicken Salad Sandwich</h2>
           <!--dropdown-->
           <!--add to cart button-->
         </div>
         <div class="col-md-2">
-          <img src="./img/black_forest_ham.jpg">
+          <img src="./img/black_forest_ham.png">
           <h2>Black Forest Ham and Cheese</h2>
           <!--dropdown-->
           <!--add to cart button-->
         </div>
         <div class="col-md-2">
-          <img src="">
+          <img src="./img/blacken_turkey.png">
           <h2>Blackened Turkey and Cheese</h2>
           <!--dropdown-->
           <!--add to cart button-->
         </div>
         <div class="col-md-2">
-          <img src="">
+          <img src="./img/veggie_club.png">
           <h2>Veggie Club</h2><img src=""> <!--vegetarian icon-->
           <!--dropdown-->
           <!--add to cart button-->
@@ -52,13 +52,13 @@
     <div class="container">
       <div class="row">
         <div class="col-md-5">
-          <img src="">
+          <img src="./img/chef_salad.png">
           <h2>Chef Salad</h2><img src=""> <!--vegetarian icon-->
           <!--dropdown-->
           <!--add to cart button-->
         </div>
         <div class="col-md-5">
-          <img src="">
+          <img src="./img/pasta_salad.png">
           <h2>Pasta Salad</h2><img src=""> <!--vegetarian icon-->
           <!--dropdown-->
           <!--add to cart button-->
