--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          Order!
+          Order! To Do
         </div>
       </div>
     </div>
