--- a/index.html
+++ b/index.html
@@ -67,10 +67,56 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
-          Order! To Do
+        <div class="col-xs-12">
+          <h1 style="text-align: center">Order Summary</h1>
         </div>
       </div>
+      <form class="form-horizontal">
+        <div class="form-group">
+          <label for="orderdetails" class="col-sm-2 control-label">Order</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="orderdetails" placeholder="Sandwich">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="fname" class="col-sm-2 control-label">First Name</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="fname" placeholder="John">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="lname" class="col-sm-2 control-label">Last Name</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="lname" placeholder="Doe">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="inputEmail" class="col-sm-2 control-label">Email</label>
+          <div class="col-sm-10">
+            <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="paymentType" class="col-sm-2 control-label">Payment Type</label>
+          <div class="col-sm-10">
+            <select class="form-control">
+              <option>Cash</option>
+              <option>Credit</option>
+              <option>Paypal</option>
+            </select>
+          </div>
+        </div>
+    
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default">Submit</button>
+          </div>
+        </div>
+      </form>
     </div>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
