--- a/index.html
+++ b/index.html
@@ -11,39 +11,49 @@
       <div class="row">
         <div clas="col-xs-12 col-centered">
           <h1>Chef C's Kitchen</h1>
-<!--Image width???<img src="https://static.thumbtackstatic.com/pictures/6606/6udaemqu60902lak2jj50rl675.jpg">-->
+          <img src="https://static.thumbtackstatic.com/pictures/6606/6udaemqu60902lak2jj50rl675.jpg" class="thumbnail">
         </div>
       </div>
     </div></header>
     <div class="container">
       <div class="row">
         <div class="col-md-2">
+          <div class="thumbnail">
           <img src="./img/roast_beef.png">
-          <h2>Smoked Roast Beef and Cheese</h2>
+          <div class="caption">
+          <h2>Smoked Roast Beef and Cheese</h2></div><button type="button" class="btn btn-success">Add to Cart</button></div>
           <!--dropdown-->
           <!--add to cart button-->
         </div>
         <div class="col-md-2">
+          <div class="thumbnail">
           <img src="./img/chicken_salad_sand.png">
-          <h2>Smoked Chicken Salad Sandwich</h2>
+          <div class="caption">
+          <h2>Smoked Chicken Salad Sandwich</h2></div><button type="button" class="btn btn-success">Add to Cart</button></div>
           <!--dropdown-->
           <!--add to cart button-->
         </div>
         <div class="col-md-2">
+          <div class="thumbnail">
           <img src="./img/black_forest_ham.png">
-          <h2>Black Forest Ham and Cheese</h2>
+          <div class="caption">
+          <h2>Black Forest Ham and Cheese</h2></div><button type="button" class="btn btn-success">Add to Cart</button></div>
           <!--dropdown-->
           <!--add to cart button-->
         </div>
         <div class="col-md-2">
+          <div class="thumbnail">
           <img src="./img/blacken_turkey.png">
-          <h2>Blackened Turkey and Cheese</h2>
+          <div class="caption">
+          <h2>Blackened Turkey and Cheese</h2></div><button type="button" class="btn btn-success">Add to Cart</button></div>
           <!--dropdown-->
           <!--add to cart button-->
         </div>
         <div class="col-md-2">
+          <div class="thumbnail">
           <img src="./img/veggie_club.png">
-          <h2>Veggie Club</h2><img src=""> <!--vegetarian icon-->
+          <div class="caption">
+          <h2>Veggie Club</h2><img src=""><!--vegetarian icon--></div><button type="button" class="btn btn-success">Add to Cart</button></div>
           <!--dropdown-->
           <!--add to cart button-->
         </div>
@@ -52,14 +62,18 @@
     <div class="container">
       <div class="row">
         <div class="col-md-5">
+          <div class="thumbnail">
           <img src="./img/chef_salad.png">
-          <h2>Chef Salad</h2><img src=""> <!--vegetarian icon-->
+          <div class="caption">
+          <h2>Chef Salad</h2><img src=""> <!--vegetarian icon--></div><button type="button" class="btn btn-success">Add to Cart</button></div>
           <!--dropdown-->
           <!--add to cart button-->
         </div>
         <div class="col-md-5">
-          <img src="./img/pasta_salad.png">
-          <h2>Pasta Salad</h2><img src=""> <!--vegetarian icon-->
+          <div class="thumbnail">
+          <img src="./img/pasta_salad.png" class="thumbnail">
+          <div class="caption">
+          <h2>Pasta Salad</h2><img src=""> <!--vegetarian icon--></div><button type="button" class="btn btn-success">Add to Cart</button></div>
           <!--dropdown-->
           <!--add to cart button-->
         </div>
@@ -69,6 +83,15 @@
       <div class="row">
         <div class="col-md-12">
           Order!
+          <div class="form-group">
+            <label for="sel1">Select list:</label>
+            <select class="form-control" id="sel1">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+            </select>
+          </div>
         </div>
       </div>
     </div>
