--- a/index.html
+++ b/index.html
@@ -7,94 +7,102 @@
     <title>Chef C's Kitchen</title>
   </head>
   <body>
-    <header><div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div clas="col-xs-12 col-centered">
-          <h1>Chef C's Kitchen</h1>
-          <img src="https://static.thumbtackstatic.com/pictures/6606/6udaemqu60902lak2jj50rl675.jpg" class="thumbnail">
+      <header class="col-lg-12 col-md-12 col-xs-12 col-s-12 col-centered" align="center">
+        <img src="./chef_c_img/chefclogo.png">
+      </header>
+      </div>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="thumbnail">
+            <img src="./img/roast_beef.png">
+            <div class="caption">
+              <h2>Smoked Roast Beef and Cheese</h2>
+            </div>
+          <button type="button" class="btn btn-success">Add to Cart</button>
+        </div>
+        </div>
+        <div class="col-md-3">
+          <div class="thumbnail">
+            <img src="./img/chicken_salad_sand.png">
+          <div class="caption">
+            <h2>Smoked Chicken Salad Sandwich</h2>
+          </div>
+          <button type="button" class="btn btn-success">Add to Cart</button>
         </div>
       </div>
-    </div></header>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-2">
+        <div class="col-md-3">
           <div class="thumbnail">
-          <img src="./img/roast_beef.png">
-          <div class="caption">
-          <h2>Smoked Roast Beef and Cheese</h2></div><button type="button" class="btn btn-success">Add to Cart</button></div>
-          <!--dropdown-->
-          <!--add to cart button-->
-        </div>
-        <div class="col-md-2">
-          <div class="thumbnail">
-          <img src="./img/chicken_salad_sand.png">
-          <div class="caption">
-          <h2>Smoked Chicken Salad Sandwich</h2></div><button type="button" class="btn btn-success">Add to Cart</button></div>
-          <!--dropdown-->
-          <!--add to cart button-->
-        </div>
-        <div class="col-md-2">
-          <div class="thumbnail">
-          <img src="./img/black_forest_ham.png">
-          <div class="caption">
-          <h2>Black Forest Ham and Cheese</h2></div><button type="button" class="btn btn-success">Add to Cart</button></div>
-          <!--dropdown-->
-          <!--add to cart button-->
-        </div>
-        <div class="col-md-2">
-          <div class="thumbnail">
-          <img src="./img/blacken_turkey.png">
-          <div class="caption">
-          <h2>Blackened Turkey and Cheese</h2></div><button type="button" class="btn btn-success">Add to Cart</button></div>
-          <!--dropdown-->
-          <!--add to cart button-->
-        </div>
-        <div class="col-md-2">
-          <div class="thumbnail">
-          <img src="./img/veggie_club.png">
-          <div class="caption">
-          <h2>Veggie Club</h2><img src=""><!--vegetarian icon--></div><button type="button" class="btn btn-success">Add to Cart</button></div>
-          <!--dropdown-->
-          <!--add to cart button-->
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-5">
-          <div class="thumbnail">
-          <img src="./img/chef_salad.png">
-          <div class="caption">
-          <h2>Chef Salad</h2><img src=""> <!--vegetarian icon--></div><button type="button" class="btn btn-success">Add to Cart</button></div>
-          <!--dropdown-->
-          <!--add to cart button-->
-        </div>
-        <div class="col-md-5">
-          <div class="thumbnail">
-          <img src="./img/pasta_salad.png" class="thumbnail">
-          <div class="caption">
-          <h2>Pasta Salad</h2><img src=""> <!--vegetarian icon--></div><button type="button" class="btn btn-success">Add to Cart</button></div>
-          <!--dropdown-->
-          <!--add to cart button-->
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          Order!
-          <div class="form-group">
-            <label for="sel1">Select list:</label>
-            <select class="form-control" id="sel1">
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-            </select>
+              <img src="./img/black_forest_ham.png">
+            <div class="caption">
+              <h2>Black Forest Ham and Cheese</h2>
+            </div>
+            <button type="button" class="btn btn-success">Add to Cart</button>
           </div>
         </div>
+        <div class="col-md-3">
+          <div class="thumbnail">
+            <img src="./img/blacken_turkey.png">
+          <div class="caption">
+            <h2>Blackened Turkey and Cheese</h2>
+          </div>
+          <button type="button" class="btn btn-success">Add to Cart</button>
+        </div>
       </div>
+    </div>
+      <div class="row">
+          <div class="col-md-3"></div>
+          <div class="col-md-5">
+            <div class="thumbnail">
+              <img src="./img/veggie_club.png">
+              <div class="caption">
+                <h2>Veggie Club</h2><img class="veggieicon" src="./img/vegetarianicon.png"> <!--vegetarian icon-->
+                </div>
+                <button type="button" class="btn btn-success">Add to Cart</button>
+              </div>
+            </div>
+        </div>
+      <div class="row">
+        <div class="col-md-5">
+          <div class="thumbnail">
+            <img src="./img/chef_salad.png">
+            <div class="caption">
+              <h2>Chef Salad</h2><img class="veggieicon" src="./img/vegetarianicon.png"> <!--vegetarian icon-->
+            </div>
+          <button type="button" class="btn btn-success">Add to Cart</button>
+        </div>
+          <!--dropdown-->
+          <!--add to cart button-->
+        </div>
+        <div class="col-md-5">
+          <div class="thumbnail">
+            <img src="./img/pasta_salad.png" >
+          <div class="caption">
+            <h2>Pasta Salad</h2><img class="veggieicon" src="./img/vegetarianicon.png"> <!--vegetarian icon-->
+          </div>
+          <button type="button" class="btn btn-success">Add to Cart</button>
+        </div>
+          <!--dropdown-->
+          <!--add to cart button-->
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h3>Order!</h3>
+        </div>
       <form class="form-horizontal">
+        <div class="form-group">
+          <label class="col-sm-2 control-label" for="sel1">Select list:</label>
+          <div class="col-sm-10">
+          <select class="form-control" id="sel1">
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+          </select>
+        </div>
+        </div>
         <div class="form-group">
           <label for="orderdetails" class="col-sm-2 control-label">Order</label>
           <div class="col-sm-10">
@@ -140,6 +148,7 @@
           </div>
         </div>
       </form>
+      </div>
     </div>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
