fixing the vegetarian icon

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="thumbnail">
               <img src="./img/veggie_club.png">
               <div class="caption">
-                <h2>Veggie Club</h2><img class="veggieicon" src="./img/vegetarianicon.png"> <!--vegetarian icon-->
+                <h2>Veggie Club<img class="veggieicon" src="./img/vegetarianicon.png"></h2> <!--vegetarian icon-->
                 </div>
                 <button type="button" class="btn btn-success">Add to Cart</button>
               </div>
@@ -68,7 +68,7 @@
           <div class="thumbnail">
             <img src="./img/chef_salad.png">
             <div class="caption">
-              <h2>Chef Salad</h2><img class="veggieicon" src="./img/vegetarianicon.png"> <!--vegetarian icon-->
+              <h2>Chef Salad<img class="veggieicon" src="./img/vegetarianicon.png"></h2> <!--vegetarian icon-->
             </div>
           <button type="button" class="btn btn-success">Add to Cart</button>
         </div>
@@ -79,7 +79,7 @@
           <div class="thumbnail">
             <img src="./img/pasta_salad.png" >
           <div class="caption">
-            <h2>Pasta Salad</h2><img class="veggieicon" src="./img/vegetarianicon.png"> <!--vegetarian icon-->
+            <h2>Pasta Salad<img class="veggieicon" src="./img/vegetarianicon.png"></h2> <!--vegetarian icon-->
           </div>
           <button type="button" class="btn btn-success">Add to Cart</button>
         </div>
